// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DateSelector should render the DateSelector component with errors 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <h1
      class="govuk-heading-m"
    >
      Start date
    </h1>
    <div
      class=""
    >
      <span
        class="govuk-error-message"
        id="start-day-input-error"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error: 
        </span>
        Start date must be a real date
      </span>
      <div
        aria-describedby="start-day-input-error"
        class="govuk-date-input govuk-date-input--error"
        id="start-date"
      >
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-day-input"
            >
              Day
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input--error "
              id="start-day-input"
              name="startDateDay"
              type="text"
              value="first"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-month-input"
            >
              Month
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input--error "
              id="start-month-input"
              name="startDateMonth"
              type="text"
              value="august"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-year-input"
            >
              Year
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input--error "
              id="start-year-input"
              name="startDateYear"
              type="text"
              value="2020"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector should render the DateSelector component with valid inputs 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <h1
      class="govuk-heading-m"
    >
      Start date
    </h1>
    <div
      class=""
    >
      <div
        class="govuk-date-input"
        id="start-date"
      >
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-day-input"
            >
              Day
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="start-day-input"
              name="startDateDay"
              type="text"
              value="01"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-month-input"
            >
              Month
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="start-month-input"
              name="startDateMonth"
              type="text"
              value="01"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-year-input"
            >
              Year
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-4  "
              id="start-year-input"
              name="startDateYear"
              type="text"
              value="2020"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector should render the end DateSelector component empty 1`] = `
<DocumentFragment>
  <div
    class="govuk-!-padding-top-4"
  >
    <h1
      class="govuk-heading-m"
    >
      End date
    </h1>
    <div
      class=""
    >
      <div
        class="govuk-date-input"
        id="end-date"
      >
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="end-day-input"
            >
              Day
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="end-day-input"
              name="endDateDay"
              type="text"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="end-month-input"
            >
              Month
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="end-month-input"
              name="endDateMonth"
              type="text"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="end-year-input"
            >
              Year
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-4  "
              id="end-year-input"
              name="endDateYear"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector should render the start DateSelector component empty 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <h1
      class="govuk-heading-m"
    >
      Start date
    </h1>
    <div
      class=""
    >
      <div
        class="govuk-date-input"
        id="start-date"
      >
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-day-input"
            >
              Day
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="start-day-input"
              name="startDateDay"
              type="text"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-month-input"
            >
              Month
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-2  "
              id="start-month-input"
              name="startDateMonth"
              type="text"
            />
          </div>
        </div>
        <div
          class="govuk-date-input__item"
        >
          <div
            class="govuk-form-group"
          >
            <label
              class="govuk-label govuk-date-input__label"
              for="start-year-input"
            >
              Year
            </label>
            <input
              class="govuk-input govuk-date-input__input govuk-input--width-4  "
              id="start-year-input"
              name="startDateYear"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
